# SolARPipelineManager

./: .gitignore  BuildCSharp.bat  BuildCSharp.sh  CMakeLists.txt  JenkinsFile  README.adoc  README.md  SolARPipelineManager.pri  SolARPipelineManager.pro  bcom-SolARPipelineManager.pc.in  packagedependencies-cmake.txt  packagedependencies.txt
interfaces/: ConsoleRedirector.h  Eigen.i  MathDefinitions.i  PipelineManager.h  SolARPipelineManager.i  SolARPluginPipelineManager.h  SolAR_Core.i  SolAR_Datastructure.i  Swig.i  XPCF_Core.i  std_string_ref.i
interfaces/Unity/: UnityPluginInterface.h
src/: ConsoleRedirector.cpp  PipelineManager.cpp  PipelineManager_wrap.cpp  SolARPluginPipelineManager.cpp  SolARPluginPipelineManager_wrap.cpp
src/Unity/: UnityPluginInterface.cpp
swig/: SolAR_Core.i  SolAR_Datastructure.i  SolAR_Pipeline.i  XPCF_Core.i
swig/include/: Eigen.i  MathDefinitions.i
